[package]
name = "bar_daemon2"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

[[bin]]
name = "bar_daemon2"
path = "src/daemon/main.rs"
[[bin]]
name = "bar_daemon2-client"
path = "src/client/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.62"
bincode = "1.3.3"
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
json = "0.12.4"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
simplelog = { version = "0.12.0", features = ["paris"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
